--- a/message/package.json
+++ b/message/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-session": "^1.17.2",
     "nodemon": "^2.0.16",
