--- a/message/package.json
+++ b/message/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^2.0.16",
     "print": "^1.2.0",
     "qs": "^6.10.3",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   }
 }
